[gd_scene load_steps=2 format=3 uid="uid://cyppjbs56tkff"]

[ext_resource type="Script" path="res://Scripts/MovieCritic.gd" id="1_4l4io"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4l4io")

[node name="Poster1" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 72.0
offset_right = 210.0
offset_bottom = 272.0
mouse_filter = 0
expand_mode = 2
stretch_mode = 4

[node name="Poster2" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 280.5
offset_top = 72.0
offset_right = 430.5
offset_bottom = 272.0
expand_mode = 2
stretch_mode = 4

[node name="Poster3" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
offset_left = 501.0
offset_top = 72.0
offset_right = 651.0
offset_bottom = 272.0
expand_mode = 2
stretch_mode = 4

[node name="Poster4" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 721.5
offset_top = 72.0
offset_right = 871.5
offset_bottom = 272.0
expand_mode = 2
stretch_mode = 4

[node name="Poster5" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 942.0
offset_top = 72.0
offset_right = 1092.0
offset_bottom = 272.0
expand_mode = 2
stretch_mode = 4

[node name="Poster6" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 313.0
offset_right = 210.0
offset_bottom = 513.0
expand_mode = 2
stretch_mode = 4

[node name="Poster7" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 280.5
offset_top = 313.0
offset_right = 430.5
offset_bottom = 513.0
expand_mode = 2
stretch_mode = 4

[node name="Poster8" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 501.0
offset_top = 313.0
offset_right = 651.0
offset_bottom = 513.0
expand_mode = 2
stretch_mode = 4

[node name="Poster9" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 721.5
offset_top = 313.0
offset_right = 871.5
offset_bottom = 513.0
expand_mode = 2
stretch_mode = 4

[node name="Poster10" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 942.0
offset_top = 313.0
offset_right = 1092.0
offset_bottom = 513.0
expand_mode = 2
stretch_mode = 4

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 557.0
offset_right = 531.0
offset_bottom = 622.0

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 552.0
offset_right = 779.0
offset_bottom = 621.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 441.0
offset_right = 691.0
offset_bottom = 601.0

[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
